--- a/pegel/Base.lproj/Main.storyboard
+++ b/pegel/Base.lproj/Main.storyboard
@@ -54,6 +54,34 @@
             </objects>
             <point key="canvasLocation" x="498" y="-134"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="rdL-io-FPB">
+            <objects>
+                <tableViewController id="6ok-tb-9JK" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pcZ-vn-AYu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="TvG-B0-Xg3">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TvG-B0-Xg3" id="kWz-nQ-xr7">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6ok-tb-9JK" id="0Eh-bv-sgs"/>
+                            <outlet property="delegate" destination="6ok-tb-9JK" id="xRy-b2-yhl"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="waQ-wp-k6F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1473" y="-141"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="bxj-Vn-nHX">
             <objects>
